test/parser/block-comment-unterminated.delta
// RUN: not %delta -parse %s

// CHECK: [[@LINE+1]]:1: error: unterminated block comment
/*
